--- a/ayuda.html
+++ b/ayuda.html
@@ -1,9 +1,72 @@
-<h2>Socio Completo:</h2>
-<p>Con un precio de 200€, tienes derecho a muchas cosas</p>
-<br><br>
-<h2>Socio Rojo:</h2>
-<p>Con un precio de 100€, tienes derecho a muchas cosas</p>
-<br><br>
-<h2>Socio Blanco:</h2>
-<p>Con un precio de 50€, tienes derecho a muchas cosas</p>
-<br><br>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ayuda</title>
+    <link rel="stylesheet" href="ayuda.css">
+</head>
+
+<body>
+    <h1 class="s">Socios</h1>
+    <header>
+        <div>
+            <table>
+                <tr>
+                    <th>Socio Completo</th>
+                    <th>Socio Rojo</th>
+                    <th>Socio Blanco</th>
+                </tr>
+                <tr>
+                    <td>50€</td>
+                    <td>30€</td>
+                    <td>20€</td>
+                </tr>
+            </table>
+        </div>
+    </header>
+    <div class="mitad">
+        <p>Un porcentaje será destinado a causas solidarias</p>
+        <p>Descuento del 10% si reside en Sevilla</p>
+        <hr/><hr/>
+        <p>Por cada año de Socio 1% de descuento</p>
+    </div>
+    <footer>
+        <div class="pie">
+            <table>
+                <tr>
+                    <th colspan="3">Ventajas</th>
+                </tr>
+                <tr>
+                    <td>Socio Completo</td>
+                    <td>Socio Rojo</td>
+                    <td>Socio Blanco</td>
+                </tr>
+                <tr>
+                    <td>Visita semanal a las instalaciones</td>
+                    <td>Visita mensual a las instalaciones</td>
+                    <td>Visita anual a las instalaciones</td>
+                </tr>
+                <tr>
+                    <td>30% descuento en merchandising</td>
+                    <td>20% descuento en merchandising</td>
+                    <td>10% descuento en merchandising</td>
+                </tr>
+                <tr>
+                    <td>Meet & Greet con todos los jugadores</td>
+                    <td>Meet & Greet con algunos jugadores</td>
+                    <td>No hay Meet & Greet</td>
+                </tr>
+                <tr>
+                    <td>Descuento de 50% al acompañante</td>
+                    <td>Descuento de 50% al acompañante</td> 
+                    <td><a href="registro.html">Volver al Registro</a></td>                   
+                </tr>
+            </table>
+        </div>
+    </footer>
+</body>
+
+</html>
