--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="css/inicio.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <footer>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <button onclick="location.href='registro.html';">Únete!</button>
+        <button onclick="location.href='html/registro.html';">Únete!</button>
     </footer>
 </body>
 
