--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda</title>
-    <link rel="stylesheet" href="ayuda.css">
+    <link rel="stylesheet" href="../css/ayuda.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         <div class="pie">
             <table>
                 <tr>
-                    <th colspan="3">Ventajas</th>
+                    <th colspan="3" class="q">Ventajas</th>
                 </tr>
                 <tr>
                     <td>Socio Completo</td>
