--- a/html/pago.html
+++ b/html/pago.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pago.css">
-    <script src="../js/pago.js"></script>
+
 </head>
 
 <body>
@@ -47,19 +47,20 @@
 
         </div>
 
-        <form action="">
+        <form id="fpago" action="fin.html">
             <div class="inputBox">
                 <span>card number</span>
-                <input type="text" maxlength="16" class="card-number-input">
+                <input type="text" id="numero" maxlength="19" class="card-number-input">
             </div>
             <div class="inputBox">
                 <span>card holder</span>
-                <input type="text" class="card-holder-input">
-            </div>
+                <input type="text" id="nombre" maxlength="35" class="card-holder-input">
+                
+            </div>            
             <div class="flexbox">
                 <div class="inputBox">
                     <span>expiration mm</span>
-                    <select name="" id="" class="month-input">
+                    <select  name="expm" id="expm" class="month-input">
                         <option value="month" selected disabled>month</option>
                         <option value="01">01</option>
                         <option value="02">02</option>
@@ -77,7 +78,7 @@
                 </div>
                 <div class="inputBox">
                     <span>expiration yy</span>
-                    <select name="" id="" class="year-input">
+                    <select  name="expy" id="expy" class="year-input">
                         <option value="year" selected disabled>year</option>
                         <option value="2021">2021</option>
                         <option value="2022">2022</option>
@@ -93,48 +94,14 @@
                 </div>
                 <div class="inputBox">
                     <span>cvv</span>
-                    <input type="text" maxlength="4" class="cvv-input">
+                    <input type="text" id="cvv" maxlength="4" class="cvv-input">
                 </div>
             </div>
-            <input type="submit" value="submit" class="submit-btn">
+            <input type="submit" id="submit" value="submit" class="submit-btn">
         </form>
 
-    </div>
-
-    <script>
-
-        document.querySelector('.card-number-input').oninput = () => {
-            document.querySelector('.card-number-box').innerText = document.querySelector('.card-number-input').value;
-        }
-
-        document.querySelector('.card-holder-input').oninput = () => {
-            document.querySelector('.card-holder-name').innerText = document.querySelector('.card-holder-input').value;
-        }
-
-        document.querySelector('.month-input').oninput = () => {
-            document.querySelector('.exp-month').innerText = document.querySelector('.month-input').value;
-        }
-
-        document.querySelector('.year-input').oninput = () => {
-            document.querySelector('.exp-year').innerText = document.querySelector('.year-input').value;
-        }
-
-        document.querySelector('.cvv-input').onmouseenter = () => {
-            document.querySelector('.front').style.transform = 'perspective(1000px) rotateY(-180deg)';
-            document.querySelector('.back').style.transform = 'perspective(1000px) rotateY(0deg)';
-        }
-
-        document.querySelector('.cvv-input').onmouseleave = () => {
-            document.querySelector('.front').style.transform = 'perspective(1000px) rotateY(0deg)';
-            document.querySelector('.back').style.transform = 'perspective(1000px) rotateY(180deg)';
-        }
-
-        document.querySelector('.cvv-input').oninput = () => {
-            document.querySelector('.cvv-box').innerText = document.querySelector('.cvv-input').value;
-        }
-
-    </script>
-
+    </div>   
 </body>
+<script src="../js/pago.js"></script>
 
 </html>
